refactor: updated the method used to calculate how much the stay was